<resources>
    <string name="app_name">MoviesNow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_msg">Check internet connection.</string>
    <string name="loading_page">Loading page</string>
    <string name="action_favourite">Add to favourites</string>
    <string name="action_search">Search</string>
    <string name="title_activity_movie_detail">Movie Details</string>
    <string name="action_share">Share</string>
    <string name="title_activity_favourite_movie_detail">Movie Detail</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favourites">Favourites</string>
    <string name="movie_extra_subject">Hey! Movie suggestion for you :)</string>
    <string name="added_to_favourites">Movie added to favourites!</string>
    <string name="removed_from_favourites">Movie removed from favourites.</string>
    <string name="share_via">Share Via</string>
    <string name="release_date">"Release Date - "</string>
    <string name="duration">"Duration - "</string>
    <string name="site">"Site - "</string>
    <string name="quality">"Quality - "</string>
    <string name="min">" min"</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language</string>
    <string name="read_more">Read More</string>
    <string name="username">Username</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="drawer_layout">Drawer layout</string>
    <string name="navigation_view">Navigation view</string>
    <string name="fav_movie_detail_layout">Fav movie detail layout</string>
    <string name="recycler_movie_details">Recycler movie details layout</string>
    <string name="collapsing_toolbar_layout_movie_details">Collapsing movie details toolbar layout </string>
    <string name="backdrop">Backdrop image</string>
    <string name="toolbar_movie_details">Toolbar movie details</string>
    <string name="fab_favourite">Fab favourite button</string>
    <string name="network_image_view">Network image view</string>
    <string name="popular_list_layout">Popular list layout</string>
    <string name="viewpager_layout">Viewpager layout</string>
    <string name="toolbar">Navigation toolbar</string>
    <string name="search_box">Search box</string>
    <string name="tabs">Tab layout</string>
    <string name="title_text">Title text view</string>
    <string name="ads_view">Ads view</string>
    <string name="detail_holder_layout"> Detail holder layout</string>
    <string name="tagline_text">Tagline text view</string>
    <string name="date_status"> Date status text</string>
    <string name="duration_text">Duration text view</string>
    <string name="ratings_background">Rating background imageview</string>
    <string name="rating_text">Rating imageview</string>
    <string name="vote_count_text">Vote count textview</string>
    <string name="genre_background_view">Genre background view</string>
    <string name="genre_text">Genere textview</string>
    <string name="pop_background_view">Pop background view</string>
    <string name="popularity_value">Popularity value</string>
    <string name="popularity_text">Popularity textview</string>
    <string name="lang_bg_view">Lang bg view</string>
    <string name="lang_value_view">Lang value textview</string>
    <string name="lang_text"> Lang textview</string>
    <string name="overview_view">Overview view</string>
    <string name="overview_textview">Overview textview</string>
    <string name="border_layout">Border layout</string>
    <string name="video_camera_imageview">Video camera imageview</string>
    <string name="movie_text_view">Movie text view</string>
    <string name="nav_header_layout">Nav header layout</string>
    <string name="username_textview">Username textview</string>
    <string name="widget_layout">Widget layout</string>
    <string name="widget_main_layout">Widget main layout</string>
    <string name="widget_app_name_text">Widget App name textview</string>
    <string name="widget_listview">Widget list view</string>
    <string name="material_ripple_layout">Material ripple layout</string>
    <string name="site_text">Site text view</string>
    <string name="quality_text">Quality textview</string>
    <string name="review_view">Review view</string>
    <string name="review_author_text">Review author textview</string>
    <string name="review_text">Review textview</string>
    <string name="card_view">Movie card view</string>
    <string name="readmore_text">Read more textview</string>
    <string name="ads_banner_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
