<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detail_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/detail_holder_layout">

        <com.example.moviesnow.utils.PaletteNetworkImageView
            android:id="@+id/image"
            android:layout_width="126dp"
            android:layout_height="192dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/network_image_view"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/image"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textSize="18sp"
            android:contentDescription="@string/title_text"/>

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_toRightOf="@id/image"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textStyle="italic"
            android:contentDescription="@string/tagline_text"/>

        <TextView
            android:id="@+id/date_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tagline"
            android:layout_toRightOf="@id/image"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:contentDescription="@string/date_status"/>


        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_status"
            android:layout_toRightOf="@id/image"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:contentDescription="@string/duration_text"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#20000000"
        android:padding="8dp" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="112dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="4dp"
            android:paddingTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/ratings_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_ratings"
                    android:contentDescription="@string/ratings_background"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:contentDescription="rating_text"
                    android:textSize="11sp" />

            </FrameLayout>


            <TextView
                android:id="@+id/vote_count"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="11sp"
                android:contentDescription="@string/vote_count_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/two"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/one"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="4dp"
            android:paddingTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/genre_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_genre"
                    android:contentDescription="@string/genre_background_view"/>
            </FrameLayout>

            <TextView
                android:id="@+id/genre"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="11sp"
                android:contentDescription="@string/genre_text"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/three"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/two"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingRight="4dp"
            android:paddingTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/pop_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_normal_background"
                    android:contentDescription="@string/pop_background_view"/>

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="11sp"
                    android:contentDescription="@string/popularity_value"/>

            </FrameLayout>


            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/popularity"
                android:textSize="11sp"
                android:contentDescription="@string/popularity_text"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/four"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/three"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/lang_background"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/lang_bg_view"
                    android:src="@drawable/ic_normal_background" />

                <TextView
                    android:id="@+id/language"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:contentDescription="@string/lang_value_view"
                    android:textSize="11sp" />

            </FrameLayout>


            <TextView
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/language"
                android:textSize="11sp"
                android:contentDescription="@string/lang_text"/>
        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#20000000"
        android:padding="8dp"
        android:contentDescription="@string/overview_view"/>

    <TextView
        android:id="@+id/overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:contentDescription="@string/overview_textview"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#20000000"
        android:padding="8dp"
        android:contentDescription="@string/border_layout"/>

</LinearLayout>