<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/material_ripple_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/trailer_image"
                android:layout_width="0dp"
                android:layout_height="96dp"
                android:layout_weight="0.45"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/network_image_view"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingBottom="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="2dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:contentDescription="@string/title_text"/>

                <TextView
                    android:id="@+id/site_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="2dp"
                    android:contentDescription="@string/site_text"/>

                <TextView
                    android:id="@+id/quality_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="2dp"
                    android:contentDescription="@string/quality_text"/>
            </LinearLayout>
        </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="#20000000"
        android:padding="8dp"
        android:contentDescription="@string/border_layout"/>

</LinearLayout>